Landing logos and ads img hotfix
