# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
     },
     "servers": [
         {
-            "url": "http://admin.aast-trainery.com/api/",
+            "url": "http://localhost:8000/api/",
             "description": "Trainery Demo Server"
         }
     ],
@@ -299,6 +299,48 @@
                 "summary": "Get landing page counter data",
                 "description": "Returns landing page counter data",
                 "operationId": "getLandingPageCounterData",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/SuccessOkVirtual"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Response401Virtual"
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Response403Virtual"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/W/landingLogoes": {
+            "get": {
+                "tags": [
+                    "Landing Page"
+                ],
+                "summary": "Get landing page Companies Logoes",
+                "description": "Returns landing page counter data",
+                "operationId": "getLandingPageCompanies",
                 "responses": {
                     "200": {
                         "description": "Successful operation",
